Update arraylist API to earlier Java versions